= Changelog


== Release 0.5.2

* CHANGED: Update public suffix list to 248ea690d671 2010-09-16 18:02 +0100


== Release 0.5.1

* CHANGED: Update public suffix list to 14dc66dd53c1 2010-09-15 17:09 +0100


== Release 0.5.0

* CHANGED: Improve documentation for Domain#domain and Domain#subdomain (#1).

* CHANGED: Performance improvements (#2).


== Release 0.4.0

* CHANGED: Rename library from DomainName to PublicSuffixService to reduce the probability of name conflicts.


== Release 0.3.1

* Deprecated DomainName library.


== Release 0.3.0

* CHANGED: DomainName#domain and DomainName#subdomain are no longer alias of Domain#sld and Domain#tld.

* CHANGED: Removed DomainName#labels and decoupled Rule from DomainName.

* CHANGED: DomainName#valid? no longer instantiates new DomainName objects. This means less overhead.

* CHANGED: Refactoring the entire DomainName API. Removed the internal on-the-fly parsing. Added a bunch of new methods to check and validate the DomainName.


== Release 0.2.0

* ADDED: DomainName#valid?

* ADDED: DomainName#parse and DomainName#parse!

* ADDED: DomainName#valid_domain? and DomainName#valid_subdomain?

* CHANGED: Make sure RuleList lookup is only performed once.


== Release 0.1.0

* Initial version